[tool.poetry]
name = "TikLocal"
version = "0.3.5"
description = "A local media server that combines the features of TikTok and Pinterest"
authors = ["ChanMo <chan.mo@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ChanMo/TikLocal"
repository = "https://github.com/ChanMo/TikLocal"
keywords = ["tiklocal", "tiktok", "douyin", "jellyfin", "vlc"]

[tool.poetry.scripts]
tiklocal = 'tiklocal.run:main'

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.1.0"
waitress = "^3.0.2"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
